feat: crud erro fonológico

--- a/fono-app/Dockerfile-dev
+++ b/fono-app/Dockerfile-dev
@@ -31,9 +31,9 @@ FROM node:lts-alpine
 
 WORKDIR /fono
 
-COPY --from=init ./* ./
+COPY --from=init /fono/* ./
 # COPY ./* ./
-COPY ./.env ./.env
+# COPY ./.env ./.env
 
 RUN npm install -g nodemon watchman
 RUN npm install -g react-scripts
