--- a/fono-api/package.json
+++ b/fono-api/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "project-structure-api",
-    "version": "2.0.0",
+    "name": "fono-api",
+    "version": "0.0.1",
     "description": "Project structure for API",
     "main": "dist/index.js",
     "scripts": {
-        "prepare": "husky install",
         "start": "node .",
         "start-watch": "nodemon --delay 5000ms --exec npm run start",
         "dev": "nodemon --experimental-modules --watch 'src/' --exec 'ts-node src/index.ts' -e ts",
@@ -16,10 +15,6 @@
         "test:noCoverage": "jest --collectCoverage=false",
         "sync-db": "tsc && node dist/database/sync",
         "populate": "node dist/populate/index"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/arifintahu/project-structure-api.git"
     },
     "keywords": [
         "nodejs",
@@ -33,10 +28,6 @@
         "url": "https://github.com/arifintahu"
     },
     "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/arifintahu/project-structure-api/issues"
-    },
-    "homepage": "https://github.com/arifintahu/project-structure-api#readme",
     "dependencies": {
         "@types/babel__traverse": "^7.20.5",
         "axios": "^1.6.8",
@@ -77,7 +68,6 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
-        "husky": "^7.0.2",
         "jest": "^29.0.1",
         "lint-staged": "^11.1.2",
         "nodemon": "^2.0.13",
