--- a/fono-app/package.json
+++ b/fono-app/package.json
@@ -24,6 +24,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-scripts": "^3.0.1",
