Update directory work

--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -49,6 +49,7 @@ jobs:
         node-version: 16.
     - name: installBuildFonoAPP
       run: |
+        cd fono-app/
         npm install --legacy-peer-deps
         npm run build
     
