--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -14,7 +14,7 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "development" , "staging", "production" ]
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
