--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -60,11 +60,11 @@ jobs:
         npm install --legacy-peer-deps
         npm run build
 
-    - name: install the gcloud cli
-      uses: google-github-actions/setup-gcloud@v0
+    - name: configure cred docker
+      uses: google-github-actions/setup-gcloud@master
       with:
-        project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
+        project_id: ${{ env.GOOGLE_PROJECT }}
         export_default_credentials: true
   
     - name: build and push the docker image
@@ -88,7 +88,7 @@ jobs:
     # - name: buildPushFonoAPP
     #   run: |
     #     docker build -t ${{ env.REPOSITORY_APP }}$ENV_SUFFIX:$VERSION .
-    #     docker push gcr.io/seu-projeto/sua-imagem:$VERSION
+    #     docker push ${{ env.REPOSITORY_APP }}$ENV_SUFFIX:$VERSION
     
     # # Configure Workload Identity Federation and generate an access token.
     # - id: 'auth'
