--- a/fono-app/Dockerfile
+++ b/fono-app/Dockerfile
@@ -1,21 +1,33 @@
-FROM node:lts-alpine as builder
+FROM node:14.20.1-alpine as builder
 
-WORKDIR /fonoapp
+WORKDIR /fono
 
-COPY ./* ./
-# COPY ./node_modules/* /node_modules/
-# COPY ./ /opt/app-root/src/
+ARG SKIP_PREFLIGHT_CHECK=true
 
-RUN npm install -g npm@10.5.2
+ENV SKIP_PREFLIGHT_CHECK=${SKIP_PREFLIGHT_CHECK}
+
+RUN apk add --no-cache nodejs-dev
+
+COPY ./src ./src
+COPY ./package.json ./package.json
+COPY ./package-lock.json ./package-lock.json
+COPY ./tsconfig.json ./tsconfig.json
+
+# RUN npm install -g npm@10.6.0
+RUN npm install --legacy-peer-deps
 RUN npm install -g nodemon watchman
 RUN npm install -g react-scripts
-# RUN echo ls
-RUN npm install
+# RUN npm install webpack@4.42.0
+
+COPY ./public/* ./public/
+
 RUN npm run build
 
-FROM node:lts-alpine
-WORKDIR /fonoapp
+FROM nginx
 
-COPY --from=builder /fonoapp /fonoapp
-EXPOSE 8080
-CMD node dist/index.js
+WORKDIR /fono
+
+COPY --from=builder /fono/build /usr/share/nginx/html
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+CMD ["nginx", "-g", "daemon off;"]
