--- a/fono-app/Dockerfile-dev
+++ b/fono-app/Dockerfile-dev
@@ -1,19 +1,4 @@
-# FROM node:lts-alpine
-
-# WORKDIR /fonoapp
-
-# COPY ./* ./
-# # COPY ./node_modules/* /node_modules/
-
-# RUN npm install --global nodemon watchman
-# RUN npm install --global react-scripts
-# RUN echo ls
-# RUN npm install
-
-# CMD npm run start
-
-
-FROM node:lts-alpine as init
+FROM node:lts-alpine as builder
 
 WORKDIR /fono
 
@@ -22,7 +7,6 @@ RUN apk add --no-cache nodejs-dev
 COPY ./src ./src
 COPY ./package.json ./package.json
 COPY ./tsconfig.json ./tsconfig.json
-# COPY ./package-lock.json ./package-lock.json
 
 RUN npm install -g npm@10.5.2
 RUN npm install --legacy-peer-deps
@@ -31,9 +15,7 @@ FROM node:lts-alpine
 
 WORKDIR /fono
 
-COPY --from=init /fono/* ./
-# COPY ./* ./
-# COPY ./.env ./.env
+COPY --from=builder /fono/* ./
 
 RUN npm install -g nodemon watchman
 RUN npm install -g react-scripts
