--- a/fono-app/package.json
+++ b/fono-app/package.json
@@ -37,7 +37,8 @@
   "devDependencies": {
     "nodemon": "^2.0.13",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "webpack": "^4.29.6"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
