--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -103,7 +103,7 @@ jobs:
     - name: build and push the docker image FonoDB
       env:
         GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
-        IMAGE_TAG: ${{ env.REGISTRY_DOMAIN }}/${{ secrets.GOOGLE_PROJECT }}/${{env.IMAGE_DB}}/${{ vars.ENV_LABEL }}:${{ env.VERSION }} 
+        IMAGE_TAG: ${{ env.REGISTRY_DOMAIN }}/serious-flight-418601/${{env.IMAGE_DB}}/${{ vars.ENV_LABEL }}:${{ env.VERSION }} 
       run: |
         cd fono-db/
         docker build -t ${{ env.IMAGE_TAG }} .
