--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -89,20 +89,28 @@ jobs:
     - name: Check environment variables
       run: env
 
+    - id: "auth"
+        uses: "google-github-actions/auth@v1"
+        with:
+          credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
+
+    - name: "Set up Cloud SDK"
+      uses: "google-github-actions/setup-gcloud@v1"
+
+    - name: "Use gcloud CLI"
+      run: "gcloud info"
+
     - name: configure cred docker
       uses: google-github-actions/setup-gcloud@v2
       with:
+        credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
         service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
         project_id: ${{ vars.GOOGLE_PROJECT }}
         export_default_credentials: true
   
     - name: Configure Docker Client
-      run: |
+      run: |-
         gcloud auth configure-docker ${{ env.REGISTRY_DOMAIN }} --quiet
-        gcloud auth login
-        gcloud auth list
-        gcloud project list
-        gcloud projects get-iam-policy ${{ secrets.GOOGLE_PROJECT }}
   
     - name: build and push the docker image FonoDB
       env:
