--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -89,10 +89,12 @@ jobs:
     - name: Check environment variables
       run: env
 
+    - name: "Checkout"
+      uses: "actions/checkout@v3"
     - id: "auth"
-        uses: "google-github-actions/auth@v1"
-        with:
-          credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
+      uses: "google-github-actions/auth@v1"
+      with:
+        credentials_json: "${{ secrets.SERVICE_ACCOUNT_KEY }}"
 
     - name: "Set up Cloud SDK"
       uses: "google-github-actions/setup-gcloud@v1"
